# ocaml-mm

./: .gitignore  .merlin  .travis.yml  CHANGES  CHANGES.md  Makefile  Makefile.in  README  README.md  configure.ac  dune  dune-project  index.html  mm.opam  opam
.github/workflows/: doc.yml  main.yml
examples/: .gitignore  Makefile  OCamlMakefile  autotune.ml  dictee.ml  display.ml  drums.ml  dune  fft.ml  graphics_test.ml  gstreamer_test.ml  id.ml  midiplayer.ml  player.ml  replaygain  replaygain.ml  sine_wav.ml  test.ml  webcam.ml
examples/autotune/: Makefile  autotune.ml
examples/deprecated/: Makefile
examples/deprecated/ffmpeg_player/: Makefile  player.ml
examples/deprecated/ffmpeg_player_gtk/: Makefile  gui.glade  player.ml
examples/deprecated/motion/: OCamlMakefile  player.ml
examples/deprecated/motion/display/: Makefile  OCamlMakefile
examples/deprecated/theora_player/: Makefile  player.ml
examples/deprecated/webcam_player/: player.ml
examples/dictee/: Makefile  dictee.ml
examples/display_image/: Makefile  display.ml
examples/drums/: Makefile  drums.ml
examples/ffmpeg_player/: Makefile  player.ml
examples/ffmpeg_player_gtk/: player.ml
examples/fft_viewer/: Makefile  fft.ml
examples/gstreamer/: Makefile  test.ml
examples/gstreamer_out/: Makefile  test.ml
examples/ifft_fft/: Makefile  id.ml
examples/midi_player/: Makefile  player.ml
examples/motion/: Makefile  player.ml
examples/motion/display/: display.ml
examples/oss_wav_player/: Makefile  player.ml
examples/sine_wav/: Makefile  sine_wav.ml
examples/test/: test.ml
examples/test-audio/: Makefile  test.ml
examples/test-i420/: .merlin  test.ml
examples/test-yuv420/: .merlin  Makefile  test.ml
examples/theora_player/: player.ml
examples/v4l_gstreamer/: Makefile  test.ml
examples/video_player/: Makefile  test.ml
examples/wav_player/: Makefile  player.ml
examples/webcam_player/: Makefile  player.ml
m4/: ocaml.m4
mm/: index.html
mm/Mm/: index.html
mm/Mm/Audio/: index.html
mm/Mm/Audio/Analyze/: index.html
mm/Mm/Audio/Buffer_ext/: index.html
mm/Mm/Audio/Effect/: index.html
mm/Mm/Audio/FLTP/: index.html
mm/Mm/Audio/Generator/: index.html
mm/Mm/Audio/IO/: index.html
mm/Mm/Audio/Mono/: index.html
mm/Mm/Audio/Note/: index.html
mm/Mm/Audio/Ringbuffer/: index.html
mm/Mm/Audio/Ringbuffer_ext/: index.html
mm/Mm/Audio/S16BE/: index.html
mm/Mm/Audio/S16LE/: index.html
mm/Mm/Audio/S24LE/: index.html
mm/Mm/Audio/S32LE/: index.html
mm/Mm/Audio/Sample/: index.html
mm/Mm/Audio/U8/: index.html
mm/Mm/Image/: index.html
mm/Mm/Image/ARGB8/: index.html
mm/Mm/Image/BGRA/: index.html
mm/Mm/Image/Bitmap/: index.html
mm/Mm/Image/Canvas/: index.html
mm/Mm/Image/CanvasYUV420/: index.html
mm/Mm/Image/Data/: index.html
mm/Mm/Image/Draw/: index.html
mm/Mm/Image/Fraction/: index.html
mm/Mm/Image/Generic/: index.html
mm/Mm/Image/Pixel/: index.html
mm/Mm/Image/Point/: index.html
mm/Mm/Image/RGB8/: index.html
mm/Mm/Image/RGBA32/: index.html
mm/Mm/Image/YUV420/: index.html
mm/Mm/Image/module-type-CanvasImage/: index.html
mm/Mm/ImageBGRA/: index.html
mm/Mm/ImageBase/: index.html
mm/Mm/ImageBase/ARGB8/: index.html
mm/Mm/ImageBase/Data/: index.html
mm/Mm/ImageBase/Draw/: index.html
mm/Mm/ImageBase/Fraction/: index.html
mm/Mm/ImageBase/Gray8/: index.html
mm/Mm/ImageBase/List/: index.html
mm/Mm/ImageBase/Motion_multi/: index.html
mm/Mm/ImageBase/Pixel/: index.html
mm/Mm/ImageBase/Point/: index.html
mm/Mm/ImageBase/RGB8/: index.html
mm/Mm/ImageBitmap/: index.html
mm/Mm/ImageBitmap/Font/: index.html
mm/Mm/ImageCanvas/: index.html
mm/Mm/ImageCanvas/Canvas/: index.html
mm/Mm/ImageCanvas/CanvasYUV420/: index.html
mm/Mm/ImageCanvas/module-type-CanvasImage/: index.html
mm/Mm/ImageGeneric/: index.html
mm/Mm/ImageGeneric/Pixel/: index.html
mm/Mm/ImageRGBA32/: index.html
mm/Mm/ImageRGBA32/Color/: index.html
mm/Mm/ImageRGBA32/Draw/: index.html
mm/Mm/ImageRGBA32/Effect/: index.html
mm/Mm/ImageRGBA32/Motion/: index.html
mm/Mm/ImageRGBA32/Scale/: index.html
mm/Mm/ImageYUV420/: index.html
mm/Mm/ImageYUV420/Effect/: index.html
mm/Mm/MIDI/: index.html
mm/Mm/MIDI/IO/: index.html
mm/Mm/Synth/: index.html
mm/Mm/Video/: index.html
mm/Mm_audio/: index.html
mm/Mm_audio/Audio/: index.html
mm/Mm_audio__Audio/: index.html
mm/Mm_base/: index.html
mm/Mm_base/IO/: index.html
mm/Mm_base/Ringbuffer/: index.html
mm/Mm_base__IO/: index.html
mm/Mm_base__Ringbuffer/: index.html
mm/Mm_image/: index.html
mm/Mm_image/Image/: index.html
mm/Mm_image/ImageBGRA/: index.html
mm/Mm_image/ImageBase/: index.html
mm/Mm_image/ImageBitmap/: index.html
mm/Mm_image/ImageCanvas/: index.html
mm/Mm_image/ImageGeneric/: index.html
mm/Mm_image/ImageRGBA32/: index.html
mm/Mm_image/ImageYUV420/: index.html
mm/Mm_image__Image/: index.html
mm/Mm_image__ImageBGRA/: index.html
mm/Mm_image__ImageBase/: index.html
mm/Mm_image__ImageCanvas/: index.html
mm/Mm_image__ImageGeneric/: index.html
mm/Mm_image__ImageRGBA32/: index.html
mm/Mm_image__ImageYUV420/: index.html
mm/Mm_midi/: index.html
mm/Mm_midi/MIDI/: index.html
mm/Mm_midi/Synth/: index.html
mm/Mm_midi__MIDI/: index.html
mm/Mm_midi__Synth/: index.html
mm/Mm_oss/: index.html
mm/Mm_oss/class-reader/: index.html
mm/Mm_oss/class-writer/: index.html
mm/Mm_video/: index.html
mm/Mm_video/Video/: index.html
mm/Mm_video__Video/: index.html
src/: IO.ml  META.in  MIDI.ml  MIDI.mli  Makefile  Makefile.in  audio.ml  audio.mli  audio_c.c  dune  image.ml  image.mli  imageBase.ml  imageBitmap.ml  imageCanvas.ml  imageGeneric.ml  imageRGBA32.ml  imageYUV420.ml  image_c.c  image_c.h  image_data.c  image_data.h  image_i420.c  image_pixel.c  image_pixel.h  image_rgb.c  image_yuv.c  image_yuv420.c  image_yuv420.h  mm.ml  mm.mli  ringbuffer.ml  ringbuffer.mli  synth.ml  synth.mli  video.ml  video.mli  video_c.c
src/config/: discover.ml  dune  endianess.c  endianess_setup.c  setup.ml
tests/: .gitignore  bug22.ml  dune
(+282 files in other folders)
