opam-version: "2.0"
name: "mm"
version: "0.6.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-mm"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "ocamlfind" {build}
]
depopts: [
  "alsa"
  "ao"
  "pulseaudio"
  "gstreamer"
  "mad"
  "ogg"
  "ocamlsdl"
  "theora"
]
bug-reports: "https://github.com/savonet/ocaml-mm/issues"
dev-repo: "git+https://github.com/savonet/ocaml-mm.git"
synopsis:
  "The mm library contains high-level to create and manipulate multimedia streams (audio, video, MIDI)"
